// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Single Multiple options or groupOptions  renders <Select /> components 1`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  aria-hidden="true"
  className="gio-select gio-select-middle gio-select-single gio-select-bordered"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
  tabIndex={0}
>
  <div
    id="selector"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="gio-select-selector"
    >
      <div
        className="gio-select-values-wrapper"
      >
        <div
          className="gio-select-item"
        >
          <span
            className="gio-select-item-text"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            全部
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      className="gio-select-arrow"
    >
      <span
        aria-label="down-filled"
        className="gio-icon gio-select-icon-arrow"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16px"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <style />
          </defs>
          <g>
            <g>
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fillRule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Select /> Single Multiple options or groupOptions  renders <Select /> components 2`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  aria-hidden="true"
  className="gio-select gio-select-middle gio-select-single gio-select-bordered"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
  tabIndex={0}
>
  <div
    id="selector"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="gio-select-selector"
    >
      <div
        className="gio-select-values-wrapper"
      >
        <div
          className="gio-select-item"
        >
          <span
            className="gio-select-item-text"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            全部
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      className="gio-select-arrow"
    >
      <span
        aria-label="down-filled"
        className="gio-icon gio-select-icon-arrow"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16px"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <style />
          </defs>
          <g>
            <g>
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fillRule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Select /> Single Multiple options or groupOptions  renders <Select /> components multiple useFooter useAll mode 1`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  aria-hidden="true"
  className="gio-select gio-select-middle gio-select-bordered"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
  tabIndex={0}
>
  <div
    id="selector"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="gio-select-selector"
    >
      <div
        className="gio-select-values-wrapper"
      />
    </div>
    <div
      aria-hidden="true"
      className="gio-select-arrow"
    >
      <span
        aria-label="down-filled"
        className="gio-icon gio-select-icon-arrow"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16px"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <style />
          </defs>
          <g>
            <g>
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fillRule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Select /> Single Multiple options or groupOptions  renders <Select.Group /> components 1`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  aria-hidden="true"
  className="gio-select gio-select-middle gio-select-single gio-select-bordered"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
  tabIndex={0}
>
  <div
    id="selector"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="gio-select-selector"
    >
      <div
        className="gio-select-values-wrapper"
      />
    </div>
    <div
      aria-hidden="true"
      className="gio-select-arrow"
    >
      <span
        aria-label="down-filled"
        className="gio-icon gio-select-icon-arrow"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16px"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <style />
          </defs>
          <g>
            <g>
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fillRule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Select /> Single Multiple options or groupOptions  renders <Select.Option /> components 1`] = `
<div
  aria-controls="expandable"
  aria-disabled={false}
  aria-expanded={false}
  aria-hidden="true"
  className="gio-select gio-select-middle gio-select-single gio-select-bordered"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="combobox"
  style={
    Object {
      "cursor": "pointer",
    }
  }
  tabIndex={0}
>
  <div
    id="selector"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="gio-select-selector"
    >
      <div
        className="gio-select-values-wrapper"
      />
    </div>
    <div
      aria-hidden="true"
      className="gio-select-arrow"
    >
      <span
        aria-label="down-filled"
        className="gio-icon gio-select-icon-arrow"
        role="img"
      >
        <svg
          fill="currentColor"
          height="16px"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <style />
          </defs>
          <g>
            <g>
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fillRule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;
